--- a/client/src/assets/sass/components/_card.scss
+++ b/client/src/assets/sass/components/_card.scss
@@ -141,6 +141,7 @@
         & img {
             width: 12rem;
             height: 12rem;
+            object-fit: cover;
             border-radius: 100%;
             cursor: pointer;
         }
