--- a/client/src/assets/sass/components/_comment.scss
+++ b/client/src/assets/sass/components/_comment.scss
@@ -22,7 +22,6 @@
         margin-left: auto;
     }
     &__total {
-        display: inline;
         float: right;
         font-size: 1.8rem;
     }
@@ -39,6 +38,7 @@
         & img {
             width: 8rem;
             height: 8rem;
+            object-fit: cover;
             border-radius: 100%;
         }
     }
