--- a/client/src/assets/sass/layout/_layouts.scss
+++ b/client/src/assets/sass/layout/_layouts.scss
@@ -74,6 +74,8 @@
         & img {
             width: 20rem;
             height: 20rem;
+            border-radius: 100%;
+            object-fit: cover;
         }
     }
     &__info {
